<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_claro"
    android:gravity="center"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/bnBack"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_weight="2"
        android:background="?selectableItemBackground"
        app:srcCompat="@drawable/abc_vector_test" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="5"
        android:background="@drawable/rounded_edge"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/bungee_shade"
            android:gravity="center"
            android:text="@string/label_name"
            android:textSize="40sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/ivPokemon"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_prueba" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvExperiencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/bungee"
                    android:text="@string/label_xp"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/tvPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/bungee"
                    android:text="@string/label_weight"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvAltura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/bungee"
                    android:text="@string/label_height"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bungee"
            android:text="@string/label_id"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/bnFavorito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:backgroundTint="#8F0000"
        android:text="@string/label_addFav"
        app:iconTint="#FFFFFF" />


</LinearLayout>